# OIBSIP

./: .gitignore  .replit  Procfile  README.md  app.py  main.py  pyproject.toml  replit.md  requirements.txt
Advanced-Random-password/: app.py
BMI-cal/: app.py  bmi_data.json
attached_assets/: Pasted-import-os-from-flask-import-Flask-render-template-request-jsonify-from-dotenv-import-load-doten-1754715978926_1754715978927.txt  _1754669038308.env  app_1754665002314.py  index_1754664992029.html  script_1754664980679.js
chatApp/backend/: .env  app.py  chat_history.db  database.py
chatApp/frontend/: package-lock.json  package.json
chatApp/frontend/src/: App.jsx  main.jsx
static/: script.js
templates/: index.html  ws_test.html
whetherApp/: app.py  test.py
